# rag-prep

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/basic/: README.md
rag_prep/: __init__.py  chunkers.py  cli.py  loaders.py  models.py  pipeline.py  sinks.py  tokenizers.py
tests/: README.md  __init__.py  conftest.py  test_chunkers.py  test_cli.py  test_customization.py  test_error_handling.py  test_loaders.py  test_pipeline.py
